[package]
name = "rust-steem"
version = "0.1.0"
authors = ["andelf <andelf@gmail.com>"]
edition = "2018"

[dependencies]
secp256k1 = { version = '0.17', features = ["rand"] }
tokio = { version = '0.2', features = ["full"] }
hex = "0.4"
sha2 = "0.8"
byteorder = "*"
aes = "0.3"
block-modes = "0.3"
rand = "0.6" # fits secp256k1
serde_json = "1.0"
bytes = "0.5"

[build-dependencies]
cc = "1.0"
